--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "eslint": "8.23.1",
