--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.1",
+    "@tanstack/react-query": "^4.13.0",
+    "@tanstack/react-query-devtools": "^4.13.0",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
-    "sass": "^1.55.0"
+    "react-imask": "^6.4.3",
+    "sass": "^1.55.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.23.1",
