--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-select": "^5.5.9",
     "sass": "^1.55.0",
     "yup": "^0.32.11"
   },
