--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^4.13.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.1",
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
