--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-select": "^5.6.0",
     "sass": "^1.55.0",
     "yarn": "^1.22.19"
   },
