--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
     "react-select": "^5.5.9",
