--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.1",
     "date-fns": "^2.29.3",
     "next": "12.3.1",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-datepicker": "^4.8.0",
